--- a/css/custom.css
+++ b/css/custom.css
@@ -41,6 +41,7 @@
   color: #000;
   text-align: center;
   z-index: 2;
+  text-shadow: 2px 2px 10px rgba(49, 49, 49, 0.5);
 }
 
 @media (max-width: 767.98px) {
